src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.nll.stderr
error: lifetime may not live long enough
  --> $DIR/project-fn-ret-invariant.rs:49:5
   |
LL | fn baz<'a, 'b>(x: Type<'a>) -> Type<'static> {
   |        -- lifetime `'a` defined here
...
LL |     bar(foo, x)
   |     ^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of the type Type<'_>, which makes the generic argument '_ invariant
   = note: the struct Type<'a> is invariant over the parameter 'a
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to previous error

